String/unicodepoint.h

typedef struct {
    Unsigned4Bytes* raw;
    unsigned int length;
} UnicodePoint;
void UPDestroy(UnicodePoint* points);
UnicodePoint UPDuplicate(UnicodePoint points);
UnicodePoint UPCreate(const Unsigned4Bytes* codes, const unsigned int length);
UnicodePoint UPCreateEmpty(const unsigned int length);
bool UPIsEqual(UnicodePoint points1, UnicodePoint points2);
UnicodePoint UPSubstring(UnicodePoint source, unsigned int startIndex, unsigned int length);
/// Simple auto make segments.
/// Result must be delete when done.
/// Return NULL if 0 length.
/// (this is just experimental function:
/// Base on Byte mode; switch to other mode (create new segment)
/// if found a segment of text which makes better encoded data
/// )
QrmSegment* UPMakeSegments(UnicodePoint points, QrmErrorCorrectionLevel level, unsigned int* length, bool isMicro);