String/shiftjisstring.h

/// Shift-JIS 2 bytes
typedef struct {
    bool isValid;
    /// Not NULL terminated.
    UnsignedByte* raw;
    unsigned int charCount;
    unsigned int byteCount;
    unsigned int minBytesPerChar;
    unsigned int maxBytesPerChar;
    UnsignedByte* charsMap;
} ShiftJisString;
void SjDestroy(ShiftJisString* string);
ShiftJisString SjDuplicate(ShiftJisString other);
/// Init with raw ShiftJIS bytes
ShiftJisString SjCreate(
    /// Raw bytes
    const UnsignedByte* raw,
    /// Number of bytes
    unsigned int length
);
/// Init from Unicode points
ShiftJisString SjCreateFromUnicodes(const UnicodePoint unicodes);
/// Get the byte index in `rawString` of character at given `index`
/// @return Byte index in rawString
unsigned int SJGetCharacterByte(
    ShiftJisString source,
    /// Character index
    unsigned int index,
    /// To store character size in byte
    UnsignedByte* charSize
);
/// Get Unicode characters code points (decoded data).
UnicodePoint SjToUnicodes(ShiftJisString source);