Examples/06.Flutter/lib/qrmatrixexample_bindings_generated.dart


  /// Get QR Version (dimension) to encode given data.
  /// @return 0 if no suiversion
  int QrmEncoderGetVersion(
    ffi.Pointer<QrmSegment> segments,
    int count,
    int level,
    QrmExtraEncodingInfo extraMode,
    bool isStructuredAppend,
  ) {
    return _QrmEncoderGetVersion(
      segments,
      count,
      level,
      extraMode,
      isStructuredAppend,
    );
  }

  late final _QrmEncoderGetVersionPtr = _lookup<
      ffi.NativeFunction<
          UnsignedByte Function(
              ffi.Pointer<QrmSegment>,
              ffi.UnsignedInt,
              ffi.Int32,
              QrmExtraEncodingInfo,
              ffi.Bool)>>('QrmEncoderGetVersion');
  late final _QrmEncoderGetVersion = _QrmEncoderGetVersionPtr.asFunction<
      int Function(
          ffi.Pointer<QrmSegment>, int, int, QrmExtraEncodingInfo, bool)>();

  /// Encode single QR symbol
  QrmBoard QrmEncoderEncode(
    ffi.Pointer<QrmSegment> segments,
    int count,
    int level,
    QrmExtraEncodingInfo extraMode,
    int minVersion,
    int maskId,
  ) {
    return _QrmEncoderEncode(
      segments,
      count,
      level,
      extraMode,
      minVersion,
      maskId,
    );
  }

  late final _QrmEncoderEncodePtr = _lookup<
      ffi.NativeFunction<
          QrmBoard Function(
              ffi.Pointer<QrmSegment>,
              ffi.UnsignedInt,
              ffi.Int32,
              QrmExtraEncodingInfo,
              UnsignedByte,
              UnsignedByte)>>('QrmEncoderEncode');
  late final _QrmEncoderEncode = _QrmEncoderEncodePtr.asFunction<
      QrmBoard Function(
          ffi.Pointer<QrmSegment>, int, int, QrmExtraEncodingInfo, int, int)>();

  /// Encode Structured Append QR symbols
  /// @return Array of QRMatrixBoard (should be deleted when done).
  ffi.Pointer<QrmBoard> QrmEncoderMakeStructuredAppend(
    ffi.Pointer<QrmStructuredAppend> parts,
    int count,
  ) {
    return _QrmEncoderMakeStructuredAppend(
      parts,
      count,
    );
  }

  late final _QrmEncoderMakeStructuredAppendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<QrmBoard> Function(ffi.Pointer<QrmStructuredAppend>,
              ffi.UnsignedInt)>>('QrmEncoderMakeStructuredAppend');
  late final _QrmEncoderMakeStructuredAppend =
      _QrmEncoderMakeStructuredAppendPtr.asFunction<
          ffi.Pointer<QrmBoard> Function(
              ffi.Pointer<QrmStructuredAppend>, int)>();

  void UPDestroy(
    ffi.Pointer<UnicodePoint> points,
  ) {
    return _UPDestroy(
      points,
    );
  }

  late final _UPDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<UnicodePoint>)>>(
          'UPDestroy');
  late final _UPDestroy =
      _UPDestroyPtr.asFunction<void Function(ffi.Pointer<UnicodePoint>)>();

  UnicodePoint UPDuplicate(
    UnicodePoint points,
  ) {
    return _UPDuplicate(
      points,
    );
  }

  late final _UPDuplicatePtr =
      _lookup<ffi.NativeFunction<UnicodePoint Function(UnicodePoint)>>(
          'UPDuplicate');
  late final _UPDuplicate =
      _UPDuplicatePtr.asFunction<UnicodePoint Function(UnicodePoint)>();

  UnicodePoint UPCreate(
    ffi.Pointer<Unsigned4Bytes> codes,
    int length,
  ) {
    return _UPCreate(
      codes,
      length,
    );
  }

  late final _UPCreatePtr = _lookup<
      ffi.NativeFunction<
          UnicodePoint Function(
              ffi.Pointer<Unsigned4Bytes>, ffi.UnsignedInt)>>('UPCreate');
  late final _UPCreate = _UPCreatePtr.asFunction<
      UnicodePoint Function(ffi.Pointer<Unsigned4Bytes>, int)>();

  UnicodePoint UPCreateEmpty(
    int length,
  ) {
    return _UPCreateEmpty(
      length,
    );
  }

  late final _UPCreateEmptyPtr =
      _lookup<ffi.NativeFunction<UnicodePoint Function(ffi.UnsignedInt)>>(
          'UPCreateEmpty');
  late final _UPCreateEmpty =
      _UPCreateEmptyPtr.asFunction<UnicodePoint Function(int)>();

  bool UPIsEqual(
    UnicodePoint points1,
    UnicodePoint points2,
  ) {
    return _UPIsEqual(
      points1,
      points2,
    );
  }

  late final _UPIsEqualPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(UnicodePoint, UnicodePoint)>>(
      'UPIsEqual');
  late final _UPIsEqual =
      _UPIsEqualPtr.asFunction<bool Function(UnicodePoint, UnicodePoint)>();

  UnicodePoint UPSubstring(
    UnicodePoint source,
    int startIndex,
    int length,
  ) {
    return _UPSubstring(
      source,
      startIndex,
      length,
    );
  }

  late final _UPSubstringPtr = _lookup<
      ffi.NativeFunction<
          UnicodePoint Function(
              UnicodePoint, ffi.UnsignedInt, ffi.UnsignedInt)>>('UPSubstring');
  late final _UPSubstring = _UPSubstringPtr.asFunction<
      UnicodePoint Function(UnicodePoint, int, int)>();

  /// Simple auto make segments.
  /// Result must be delete when done.
  /// Return NULL if 0 length.
  /// (this is just experimental function:
  /// Base on Byte mode; switch to other mode (create new segment)
  /// if found a segment of text which makes better encoded data
  /// )
  ffi.Pointer<QrmSegment> UPMakeSegments(
    UnicodePoint points,
    int level,
    ffi.Pointer<ffi.UnsignedInt> length,
    bool isMicro,
  ) {
    return _UPMakeSegments(
      points,
      level,
      length,
      isMicro,
    );
  }

  late final _UPMakeSegmentsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<QrmSegment> Function(UnicodePoint, ffi.Int32,
              ffi.Pointer<ffi.UnsignedInt>, ffi.Bool)>>('UPMakeSegments');
  late final _UPMakeSegments = _UPMakeSegmentsPtr.asFunction<
      ffi.Pointer<QrmSegment> Function(
          UnicodePoint, int, ffi.Pointer<ffi.UnsignedInt>, bool)>();

  void U8Destroy(
    ffi.Pointer<Utf8String> string,
  ) {
    return _U8Destroy(
      string,
    );
  }

  late final _U8DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Utf8String>)>>(
          'U8Destroy');
  late final _U8Destroy =
      _U8DestroyPtr.asFunction<void Function(ffi.Pointer<Utf8String>)>();

  Utf8String U8Copy(
    Utf8String other,
  ) {
    return _U8Copy(
      other,
    );
  }

  late final _U8CopyPtr =
      _lookup<ffi.NativeFunction<Utf8String Function(Utf8String)>>('U8Copy');
  late final _U8Copy = _U8CopyPtr.asFunction<Utf8String Function(Utf8String)>();

  /// Init from bytes of UTF-8 encoded string.
  Utf8String U8Create(
    ffi.Pointer<UnsignedByte> raw,
    int length,
  ) {
    return _U8Create(
      raw,
      length,
    );
  }

  late final _U8CreatePtr = _lookup<
      ffi.NativeFunction<
          Utf8String Function(
              ffi.Pointer<UnsignedByte>, ffi.UnsignedInt)>>('U8Create');
  late final _U8Create = _U8CreatePtr.asFunction<
      Utf8String Function(ffi.Pointer<UnsignedByte>, int)>();

  /// Init from Unicode codes (Encode given Unicode characters into UTF-8)
  Utf8String U8CreateFromUnicodes(
    UnicodePoint unicodes,
  ) {
    return _U8CreateFromUnicodes(
      unicodes,
    );
  }

  late final _U8CreateFromUnicodesPtr =
      _lookup<ffi.NativeFunction<Utf8String Function(UnicodePoint)>>(
          'U8CreateFromUnicodes');
  late final _U8CreateFromUnicodes =
      _U8CreateFromUnicodesPtr.asFunction<Utf8String Function(UnicodePoint)>();

  /// Get Unicode characters code points (decoded data).
  UnicodePoint U8ToUnicodes(
    Utf8String source,
  ) {
    return _U8ToUnicodes(
      source,
    );
  }

  late final _U8ToUnicodesPtr =
      _lookup<ffi.NativeFunction<UnicodePoint Function(Utf8String)>>(
          'U8ToUnicodes');
  late final _U8ToUnicodes =
      _U8ToUnicodesPtr.asFunction<UnicodePoint Function(Utf8String)>();

  void LtDestroy(
    ffi.Pointer<LatinString> string,
  ) {
    return _LtDestroy(
      string,
    );
  }

  late final _LtDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LatinString>)>>(
          'LtDestroy');
  late final _LtDestroy =
      _LtDestroyPtr.asFunction<void Function(ffi.Pointer<LatinString>)>();

  LatinString LtDuplicate(
    LatinString other,
  ) {
    return _LtDuplicate(
      other,
    );
  }

  late final _LtDuplicatePtr =
      _lookup<ffi.NativeFunction<LatinString Function(LatinString)>>(
          'LtDuplicate');
  late final _LtDuplicate =
      _LtDuplicatePtr.asFunction<LatinString Function(LatinString)>();

  /// Init from ISO 8859-1 bytes
  LatinString LtCreate(
    ffi.Pointer<UnsignedByte> raw,
    int length,
  ) {
    return _LtCreate(
      raw,
      length,
    );
  }

  late final _LtCreatePtr = _lookup<
      ffi.NativeFunction<
          LatinString Function(
              ffi.Pointer<UnsignedByte>, ffi.UnsignedInt)>>('LtCreate');
  late final _LtCreate = _LtCreatePtr.asFunction<
      LatinString Function(ffi.Pointer<UnsignedByte>, int)>();

  /// Init from Unicode code points
  LatinString LtCreateFromUnicodes(
    UnicodePoint unicodes,
  ) {
    return _LtCreateFromUnicodes(
      unicodes,
    );
  }

  late final _LtCreateFromUnicodesPtr =
      _lookup<ffi.NativeFunction<LatinString Function(UnicodePoint)>>(
          'LtCreateFromUnicodes');
  late final _LtCreateFromUnicodes =
      _LtCreateFromUnicodesPtr.asFunction<LatinString Function(UnicodePoint)>();

  /// Get Unicode characters code points (decoded data).
  UnicodePoint LtToUnicodes(
    LatinString source,
  ) {
    return _LtToUnicodes(
      source,
    );
  }

  late final _LtToUnicodesPtr =
      _lookup<ffi.NativeFunction<UnicodePoint Function(LatinString)>>(
          'LtToUnicodes');
  late final _LtToUnicodes =
      _LtToUnicodesPtr.asFunction<UnicodePoint Function(LatinString)>();

  void SjDestroy(
    ffi.Pointer<ShiftJisString> string,
  ) {
    return _SjDestroy(
      string,
    );
  }

  late final _SjDestroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ShiftJisString>)>>(
      'SjDestroy');
  late final _SjDestroy =
      _SjDestroyPtr.asFunction<void Function(ffi.Pointer<ShiftJisString>)>();

  ShiftJisString SjDuplicate(
    ShiftJisString other,
  ) {
    return _SjDuplicate(
      other,
    );
  }

  late final _SjDuplicatePtr =
      _lookup<ffi.NativeFunction<ShiftJisString Function(ShiftJisString)>>(
          'SjDuplicate');
  late final _SjDuplicate =
      _SjDuplicatePtr.asFunction<ShiftJisString Function(ShiftJisString)>();

  /// Init with raw ShiftJIS bytes
  ShiftJisString SjCreate(
    ffi.Pointer<UnsignedByte> raw,
    int length,
  ) {
    return _SjCreate(
      raw,
      length,
    );
  }

  late final _SjCreatePtr = _lookup<
      ffi.NativeFunction<
          ShiftJisString Function(
              ffi.Pointer<UnsignedByte>, ffi.UnsignedInt)>>('SjCreate');
  late final _SjCreate = _SjCreatePtr.asFunction<
      ShiftJisString Function(ffi.Pointer<UnsignedByte>, int)>();

  /// Init from Unicode points
  ShiftJisString SjCreateFromUnicodes(
    UnicodePoint unicodes,
  ) {
    return _SjCreateFromUnicodes(
      unicodes,
    );
  }

  late final _SjCreateFromUnicodesPtr =
      _lookup<ffi.NativeFunction<ShiftJisString Function(UnicodePoint)>>(
          'SjCreateFromUnicodes');
  late final _SjCreateFromUnicodes = _SjCreateFromUnicodesPtr.asFunction<
      ShiftJisString Function(UnicodePoint)>();

  /// Get the byte index in `rawString` of character at given `index`
  /// @return Byte index in rawString
  int SJGetCharacterByte(
    ShiftJisString source,
    int index,
    ffi.Pointer<UnsignedByte> charSize,
  ) {
    return _SJGetCharacterByte(
      source,
      index,
      charSize,
    );
  }

  late final _SJGetCharacterBytePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ShiftJisString, ffi.UnsignedInt,
              ffi.Pointer<UnsignedByte>)>>('SJGetCharacterByte');
  late final _SJGetCharacterByte = _SJGetCharacterBytePtr.asFunction<
      int Function(ShiftJisString, int, ffi.Pointer<UnsignedByte>)>();

  /// Get Unicode characters code points (decoded data).
  UnicodePoint SjToUnicodes(
    ShiftJisString source,
  ) {
    return _SjToUnicodes(
      source,
    );
  }
